@@ -40,6 +40,7 @@
 #include "peripherals/if1.h"
 #include "peripherals/spectranet.h"
 #include "peripherals/ula.h"
+#include "peripherals/usource.h"
 #include "profile.h"
 #include "rzx.h"
 #include "settings.h"
@@ -189,6 +190,14 @@ z80_do_opcodes( void )
 
     if( PC == 0x0001 || PC == 0x0008 || PC == 0x0066 || PC == 0x028e ) {
       disciple_page();
+    }
+
+    END_CHECK
+
+    CHECK( usource, usource_available )
+
+    if( PC == 0x2bae ) {
+      usource_toggle();
     }
 
     END_CHECK
